完成BUILD基本类建设，开发电影标签页，电影列表页（完成80）

--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/标签页.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/标签页.html
@@ -10,11 +10,17 @@
 
 <script type="text/javascript" src="/${res}/js/jquery.js"></script>
 <script type="text/javascript" src="/${res}/js/slide.js"></script>
+
+<style type="text/css">
+.tagCol{width:100%}
+.tagCol td{width:20%;font-size:14px;}
+.tagCol td b{font-weight:normal;color:#aaa;}
+</style>
 </head>
 
 <body>
-	<#include "../include/页头顶栏.html"/> 
-	<#include "../include/页头搜索栏.html"/>
+	<#include "include/页头顶栏.html"/> 
+	<#include "include/页头搜索栏.html"/>
 
 	<div id="wrapper">
 
@@ -631,7 +637,7 @@
 		</div>
 
 
-		<#include "../include/页脚.html"/>
+		<#include "include/页脚.html"/>
 
 	</div>
 </body>
