解决自定义分页标签pageNo 问题，分页模板问题。

--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/正在热映.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/正在热映.html
@@ -20,7 +20,7 @@
 							<ul class="ui-slide-content" data-slide-index="1"
 								data-index-max="4" >
 								
-								 <@cms_movie_list >
+								 <@ch_movie_list >
                                     <#list tag_list as a>
 								<li class="ui-slide-item s">
 									<ul class="">
@@ -38,7 +38,7 @@
 									</ul>
 								</li>
                                 </#list>
-                                </@cms_movie_list>
+                                </@ch_movie_list>
 
 							</ul>
 						</div>
