--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/近期热门.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/近期热门.html
@@ -9,7 +9,7 @@
 							<div class="s" data-dstat-areaid="73"
 								data-dstat-mode="click,expose">
 								<ul class="movies-list">
-								    <@cms_movie_list >
+								    <@ch_movie_list >
                                     <#list tag_list as a>
 									<li class="list-item" data-title="演员就是演员 배우는 배우다"
 										data-release="2013" data-rate="6.1" data-star="30"
@@ -33,7 +33,7 @@
 										</ul>
 									</li>
 									</#list>
-                                </@cms_movie_list>
+                                </@ch_movie_list>
 									
 								</ul>
 							</div>
