编辑器，图像上传同时截图。修改模板

--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/top.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/top.html
@@ -64,7 +64,7 @@
      -->
     <div class="top_link">
       <ul>
-        <li class="welcome">您好：admin ，欢迎来到【畅】世界</li>
+        <li class="welcome">您好：admin ，<a href="${base}/" target="_blank">欢迎来到【畅】世界</a></li>
         <li><a href="main.do" target="mainFrame">平台首页</a></li>
         <li><a href="doc/main.do" target="mainFrame">内容管理</a></li>
         <li><a href="system/main.do" target="mainFrame">系统管理</a></li>
