--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/热门豆列.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/热门豆列.html
@@ -6,21 +6,18 @@
 						<div class="doulists-bd">
 							<div class="doulist">
 								<div class="doulist-hd">
-									<a onclick="moreurl(this, {from:'mv_dl_usr'})"
-										href="http://movie.douban.com/people/angle223/"><img
+									<a href="http://www.douban.com/people/45434163/"><img
 										class="lazy"
-										data-original="http://img3.douban.com/icon/u2065435-38.jpg"
-										src="http://img3.douban.com/icon/u2065435-38.jpg"
-										alt="http://movie.douban.com/people/angle223/"
+										src="http://img3.douban.com/icon/u45434163-2.jpg"
 										style="display: inline;"></a>
 								</div>
 								<div class="doulist-bd">
 									<h3>
 										<a class="" onclick="moreurl(this, {from:'mv_dl_tl'})"
-											href="http://movie.douban.com/doulist/180721/">文艺女王必修课「华语篇」</a>
+											href="http://movie.douban.com/doulist/180721/">琳琳有话说</a>
 									</h3>
 									<div class="doulist-meta">
-										共100部影片 来自 <a href="http://movie.douban.com/people/angle223/">不良生</a>
+										
 									</div>
 								</div>
 							</div>
