--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/首页.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/首页.html
@@ -9,7 +9,7 @@
 <link href="/${res}/css/65.css" rel="stylesheet">
 
 <script type="text/javascript" src="/${res}/js/jquery.js"></script>
-<script type="text/javascript" src="/${res}/js/slide.js"></script>
+<script type="text/javascript" src="/${res}/js/slides.min.jquery.js"></script>
 </head>
 
 <body>
