--- a/easyframework-root/easyframework-webapp/src/main/webapp/index.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 	<h1>畅世界</h1><a href="/movie/">电影</a>
+	<ul>
+	   <li>./WEB-INF/t/cms/www/chang/movie/标签页.html</li>
+	</ul>
 </body>
 </html>
