--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/common/image_upload.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/common/image_upload.html
@@ -32,7 +32,7 @@ function imgCut(n) {
 		alert("");
 		return;
 	}
-	var url = "../common/v_image_area_select.do?uploadNum="+n+"&imgSrcPath="
+	var url = "../../common/v_image_area_select.do?uploadNum="+n+"&imgSrcPath="
 		+$("#uploadImgPath"+n).val()+"&zoomWidth="+$("#zoomWidth"+n).val()+"&zoomHeight="+$("#zoomHeight"+n).val();
 	window.open(url,"imgcut","height=550, width=1000, top=0, left=0, toolbar=no, menubar=no, scrollbars=auto, resizable=yes,location=no, status=no");
 }
