--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/frame/doc_left.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/frame/doc_left.html
@@ -182,7 +182,7 @@ a.mm:hover div {
 				<dd style='display:block' class='sitem' id='items1_1'>
 				<ul class='sitemu'>
 				<li>        <div class='items'>
-				            <div class='fllct'><a href='movie/v_index.do' target='systemRight'>电影首页</a></div>
+				            <div class='fllct'><a href='movie/v_index.do' target='systemRight'>生成电影</a></div>
 				
 				            <div class='flrct'>
 				                <a href='user/add.do' target='systemRight'><img src='${base}/res/admin/images/gtk-sadd.png' alt='创建栏目' title='创建栏目'/></a>
@@ -190,7 +190,7 @@ a.mm:hover div {
 				        </div>
 				</li>
 				<li>        <div class='items'>
-				            <div class='fllct'><a href='user/list.do' target='systemRight'>音乐分类</a></div>
+				            <div class='fllct'><a href='movie/v_tpls.do' target='systemRight'>模板列表</a></div>
 				
 				            <div class='flrct'>
 				                <a href='user/add.do' target='systemRight'><img src='${base}/res/admin/images/gtk-sadd.png' alt='创建栏目' title='创建栏目'/></a>
