--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/frame/system_left.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/frame/system_left.html
@@ -200,6 +200,14 @@ a.mm:hover div {
 				            </div>
 				        </div>
 				</li>
+				<li>        <div class='items'>
+				            <div class='fllct'><a href='lucene/v_index.do' target='systemRight'>全文检索</a></div>
+				
+				            <div class='flrct'>
+				                <a href='/lucene/v_index.do' target='main'><img src='${base}/res/admin/images/gtk-sadd.png' alt='录入新内容' title='录入新内容'/></a>
+				            </div>
+				        </div>
+				</li>
 				</ul>
 				</dd>
 				</dl>
