--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/top.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/easyroot/top.html
@@ -69,7 +69,7 @@
         <li><a href="doc/main.do" target="mainFrame">内容管理</a></li>
         <li><a href="system/main.do" target="mainFrame">系统管理</a></li>
         <li><a href="member/main.do" target="mainFrame">会员管理</a></li>
-        <li><a href="exit.php" target="_top">注销</a></li>
+        <li><a href="logout.do" target="_top">注销</a></li>
       </ul>
       <div class="quick"> <a href="#" class="ac_qucikmenu" id="ac_qucikmenu">快捷方式</a> <a href="#" class="ac_qucikadd" id="ac_qucikadd">
         <!--ADD-->
