系统管理员，会员注册登录

--- a/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/近期热门.html
+++ b/easyframework-root/easyframework-webapp/src/main/webapp/WEB-INF/t/cms/www/chang/movie/index/近期热门.html
@@ -1,8 +1,7 @@
 <div id="new-movies" class="">
 						<div class="new-movies-bd">
 							<h2>
-								近期热门 <span> <a
-									onclick="moreurl(this, {from:'mv_new_mr_3'})" href="/chart">
+								近期热门 <span> <a  href="/movie/list_1.html">
 										更多影视剧» </a>
 								</span>
 							</h2>
